gen/clouddebugger/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-clouddebugger2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/clouddebugger/v2/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/clouddebugger/v2/lib/src/lib.rs:2357:45
     |
2357 |                 action_value: Option<crate::breakpoints::params::ListActionValue>,
     |                                             ^^^^^^^^^^^
     |                                             |
     |                                             unresolved import
     |                                             help: a similar path exists: `crate::controller::debuggees::breakpoints`

error[E0433]: failed to resolve: unresolved import
    --> gen/clouddebugger/v2/lib/src/lib.rs:2379:35
     |
2379 |                     value: crate::breakpoints::params::ListActionValue,
     |                                   ^^^^^^^^^^^
     |                                   |
     |                                   unresolved import
     |                                   help: a similar path exists: `crate::controller::debuggees::breakpoints`

error[E0423]: expected value, found struct `debuggees::DebuggeesActions`
    --> gen/clouddebugger/v2/lib/src/lib.rs:1235:13
     |
1235 |             debuggees::DebuggeesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `debuggees::DebuggeesActions { /* fields */ }`?

error[E0423]: expected value, found struct `breakpoints::BreakpointsActions`
    --> gen/clouddebugger/v2/lib/src/lib.rs:1269:17
     |
1269 |                 breakpoints::BreakpointsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `breakpoints::BreakpointsActions { /* fields */ }`?

error[E0423]: expected value, found struct `debuggees::DebuggeesActions`
    --> gen/clouddebugger/v2/lib/src/lib.rs:1749:13
     |
1749 |             debuggees::DebuggeesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `debuggees::DebuggeesActions { /* fields */ }`?

error[E0423]: expected value, found struct `breakpoints::BreakpointsActions`
    --> gen/clouddebugger/v2/lib/src/lib.rs:1782:17
     |
1782 |                 breakpoints::BreakpointsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `breakpoints::BreakpointsActions { /* fields */ }`?

warning: unreachable expression
    --> gen/clouddebugger/v2/lib/src/lib.rs:1960:25
     |
1960 | /                         Ok(match value {
1961 | |                             _ => {
1962 | |                                 return Err(::serde::de::Error::custom(format!(
1963 | |                                     "invalid enum for #name: {}",
...    |
1966 | |                             }
1967 | |                         })
     | |__________________________^
     |
     = note: #[warn(unreachable_code)] on by default

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-clouddebugger2`.

To learn more, run the command again with --verbose.
